# shock-tube-cli

./: README.md  pyproject.toml
scripts/: compare-1d.py  sodtube1d
sodtube1d/: solver_analytic.py
