[tool.poetry]
name = "shock-tube-cli"
version = "0.1.0"
description = ""
authors = ["Taihsiang Ho (tai271828) <tai271828@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
